# code-drone

./: .gitignore  PFE_mapper_node.py  README.md  camera_server.py  flake.nix  mapper_server.py  package.xml  pyproject.toml  requirements.txt
PFE_camera_data/: package.xml  setup.cfg  setup.py
PFE_camera_data/PFE_camera_data/: camera_data_node.py
PFE_point_cloud/: package.xml
PFE_position/: package.xml  setup.py
client/: main.py  requirements.txt  ros_listener.py  send_to_drone.sh  test.py
client/drone_infos/: drone_data.py  vio_streamer.py
client/ros_nodes/: ros_qvio_node.py
client/server/: server.py  websocket_server.py
client/static/: app.js  index.html  map.html  style.css
config/: cyclonedds_remote_robot.xml
documentation/: configuration_drone.md  diagrammes.md
documentation/configurations/: version.txt
documentation/configurations/modalai/: .extrinsics.conf.swp  extrinsics.conf  extrinsics.conf.thermal  network_interface_preferences.txt  tag_locations.conf  vio_cams.conf  vio_cams.conf.boson  vio_cams.conf.seek  voxl-camera-server.conf  voxl-elrs.conf  voxl-mapper.conf  voxl-mavcam-manager.conf  voxl-mavlink-server.conf  voxl-modem.conf  voxl-open-vins-server.conf  voxl-px4.conf  voxl-qvio-server.conf  voxl-streamer.conf  voxl-tag-detector.conf  voxl-tflite-server.conf  voxl-uvc-server.conf  voxl-vision-hub.conf  voxl-vrx.conf  voxl-vtx.conf
failed/: PFE_mapper_node.py
failed/PFE_point_cloud/: Dockerfile  setup.cfg  setup.py
failed/PFE_point_cloud/PFE_point_cloud/: open3d_ros_converter.py  open3d_visualisation.py
failed/visualisation_docker/: pyviz_test.py
failed/visualisation_docker/pyvista/: Dockerfile  point_cloud2.py  point_cloud_main.py  point_cloud_node.py  requirements.txt  web_viewer.py
launch/: talk_listener_remote.launch.py
old/PFE_position/: setup.cfg
old/PFE_position/PFE_position/: qvio_node.py
src/uav_coordinator/position/: __main__.py  qvio_node.py
voxl-portal-v0.7.11/: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README.md  auto_build.sh  build.sh  build_android.sh  install_build_deps.sh
voxl-portal-v0.7.11/android/jni/: Android.mk  Application.mk  voxl_cutils.c  voxl_cutils.h  voxl_portal.mk
voxl-portal-v0.7.11/bash_completions/: voxl-configure-portal
voxl-portal-v0.7.11/include/: actuator_test.h  baro_calibration_manager.h  benchmark_manager.h  cmd_group_manager.h  costmap_manager.h  cpu_manager.h  debug_version.h  gps_graph_manager.h  header_manager.h  imu_manager.h  log_manager.h  manager_utils.h  mapper_ptcloud_manager.h  mesh_manager.h  page_manager.h  plan_manager.h  pointcloud_group_manager.h  pose_manager.h  rc_calibration_manager.h  spoof_gcs.h  video_group_manager.h  vio_manager.h
voxl-portal-v0.7.11/include/api/: portal_api.h
voxl-portal-v0.7.11/pkg/control/: control  postinst
voxl-portal-v0.7.11/scripts/: portal-parser  voxl-configure-portal
voxl-portal-v0.7.11/services/: voxl-portal.service
voxl-portal-v0.7.11/src/: actuator_test.cpp  baro_calibration_manager.cpp  benchmark_manager.cpp  cmd_group_manager.cpp  costmap_manager.cpp  cpu_manager.cpp  debug_version.cpp  gps_graph_manager.cpp  header_manager.cpp  imu_manager.cpp  log_manager.cpp  main.cpp  mapper_ptcloud_manager.cpp  mesh_manager.cpp  page_manager.cpp  pipe_channels.h  plan_manager.cpp  pointcloud_group_manager.cpp  pose_manager.cpp  rc_calibration_manager.cpp  spoof_gcs.cpp  video_group_manager.cpp  vio_manager.cpp
voxl-portal-v0.7.11/src/api/: portal_api_v1.cpp
voxl-portal-v0.7.11/web_root/: baro-calibration.html  benchmark.html  cpu.html  download-logs.html  fft.html  flight-modes.html  gps-graph.html  header.html  health-check.html  imu.html  index.html  mapper.html  pointcloud.html  rc-calibration.html  sensor-calibration.html  test-actuators.html  version.html  video.html  vio.html  voxl-system-check.html
voxl-portal-v0.7.11/web_root/css/: style.css  w3.css
voxl-portal-v0.7.11/web_root/js/: baro_calibration.js  calibration.js  flight_modes.js  get_url.js  gps_graph.js  health-check.js  inspect_vibration.js  mapper.js  pfe_mapper.js  pointcloud.js  rc_calibration.js  scripts.js  test_actuators.js  vio.js  voxl-system-check.js
wip_pathfinder_node/: Dockerfile  mapper_main.py  mapper_server.py  path_publisher_node.py  qvio_node.py  requirements.txt  robot_position_node.py  send_path_client.py  spatial_transforms.py  tag_detection_node.py
(+3 files in other folders)
